[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxpack"
version = "0.1.0"
description = "Bazel-grade artifact identity and reuse for RAG pipelines."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Anton Zaytsev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.28.0"]

[project.scripts]
ctxpack = "ctxpack:main"
